--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
     color: #000000;
     border-left: 1px solid black;
     padding: 10px;
-    
+   
   }
   
   .jumbotron {
@@ -37,7 +37,7 @@ body {
     border-top: 1px solid white;;
   }
   
-  #hour {
+  .hour {
     background-color: #ffffff;
     color: #000000;
     border-top: 1px dashed #000000;
